--- a/package.json
+++ b/package.json
@@ -1,5 +1,29 @@
 {
+  "name": "gamenight-be",
+  "description": "",
+  "version": "1.0.0",
+  "main": "index.js",
+  "scripts": {
+    "build": "tsc -p tsconfig.json -w",
+    "start": "concurrently \"tsc --watch\" \"nodemon outDir/index.js\""
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/MarcelMartinsek/Gamenight-BE.git"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/MarcelMartinsek/Gamenight-BE/issues"
+  },
+  "homepage": "https://github.com/MarcelMartinsek/Gamenight-BE#readme",
   "dependencies": {
-    "env-schema": "^5.1.0"
+    "env-schema": "^5.1.0",
+    "fastify": "^4.8.1"
+  },
+  "devDependencies": {
+    "@types/node": "^18.8.5",
+    "typescript": "^4.8.4"
   }
 }
